--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -360,7 +360,6 @@ body {
 
 .btn-ronin {
     position: relative;
-    margin-top: 30px;
     color: rgb(255, 255, 255);
     background-color: rgb(54, 54, 54);
     font-size: 16px;
@@ -368,11 +367,14 @@ body {
     text-transform: uppercase;
     overflow: hidden;
     transition: 0.5s;
-    left: -5%;
     letter-spacing: 4px;
     margin-left: auto;
     margin-right: auto;
     top: 100px;
+    left: -6%;
+    margin-right: 6%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .btn-ronin:hover {
