--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -368,13 +368,9 @@ body {
     overflow: hidden;
     transition: 0.5s;
     letter-spacing: 4px;
-    margin-left: auto;
+    margin-left: 10%;
     margin-right: auto;
     top: 100px;
-    left: -6%;
-    margin-right: 6%;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .btn-ronin:hover {
